[package]
name = "marketplace-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "marketplace_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.5.5"
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
spl-token = "4.0.0"
num_enum = "0.7.2"
uint = "0.9.4"
static_assertions = "1.1.0"
num-traits = "0.2"
num-derive = "0.4.1"

[dev-dependencies]
proptest = "1.0.0"
